2008-05-25  Piotr Fusik  <fox@scene.pl>
* win32/msc/Makefile: added votrax and pbi_xld

* sio.c, pbi_xld.c: made compilable with VC2005


2008-05-25  Perry McFarlane  <perry_m@fastmail.fm>
* votrax.[ch] vtxsmpls.inc pbi.[ch] pbi_xld.[ch] pbi_mio.[ch] pbi_bb.[ch]
pbi_scsi.[ch] sio.[ch] atari.c configure.ac atari_sdl.c
dos/atari_vga.c javanvm/atari_javanvm.c win32/atari_win32.c memory.c
pokeysnd.c DOC/CREDITS DOC/README DOC/TODO DOC/USAGE:
Added emulation of the 1400XL, 1450XLD, MIO and Black Box.


2008-05-24  Achim Haertel  <achim.haertel@e-technik.tu-chemnitz.de>
* cassette.c: implemented loading with variable baud rate


2008-05-22  Petr Stehlik  <pstehlik@sophics.cz>
* cpu_m68k.asm: made linkable (missing cim_encountered and rts_handler).
  Surprisingly it is working (ATARI BASIC READY) eventhough it is 5 years
  outdated and needs many changes to be in sync with cpu.c again.

* cpu_m68k.S: made compilable and linkable. It even sort of works but
  fails before reaching the ATARI BASIC READY prompt :-( The conversion
  is still not correct but debugging it is hard...


2008-05-21  Petr Stehlik  <pstehlik@sophics.cz>
* atari_x11.c: removed "-fps" support, use "-showspeed" instead
* USAGE, atari800.man: updated wrt. removed "-fps"
* cpu_m68k.S: added fresh conversion of 5 years outdated cpu_m68k.asm
* configure.ac: default LDFLAGS will be without the "-s" (strip binary)
  since package maintainers don't like autostriping of the debug symbols.


2008-05-20  Petr Stehlik  <pstehlik@sophics.cz>
* .asm->.S: Devpac syntax of asm files converted to gcc one
* gst2gcc: removed, no longer needed
* Makefike.in: updated for compiling/assembling the .S files
* atari_falcon.c: corrected include path to "falcon.h"
* atari.c: corrected C++-ism (my old gcc 2.91 didn't like it)
* DOC/INSTALL.falcon updated (an optimized rebuild script added)


2008-05-15  Perry McFarlane  <perry_m@fastmail.fm>
* rdevice.[ch] atari.c configure.ac: Windows support for R: device.