@@ -1,3 +1,8 @@
+2008-05-25  Perry McFarlane  <perry_m@fastmail.fm>
+* atari_sdl.c, cpu.c, pbi_mio.c, pbi_xld.c, win32/atari_win32.c,
+win32/screen_win32.c: some gcc -ansi -pedantic fixes
+
+
 2008-05-25  Piotr Fusik  <fox@scene.pl>
 * win32/msc/Makefile: added votrax and pbi_xld
 
